# Embroidermodder

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  CODE-STANDARDS  CODE-STANDARDS.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.ini  CREDITS.md  CURRENT.md  Doxyfile  EM2.bat  EM2.sh  LICENSE  LICENSE.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  ZLIB-LICENSE  ZLIB-LICENSE.txt  build.bat  build.gradle  build.sh  build_android.sh  build_docs.sh  build_ios.sh  changelog.md  clang-tidy.txt  config.cmake  config.toml  cpack.cmake  debug.sh  design.md  em2.bash  embroidermodder.pro  escape.sed  (+14 more)
.github/: FUNDING.md  FUNDING.yml  pull_request_template.md
.svn/: wc.db
EmbroideryProto/: FormatExp.swift  FormatPec.swift  FormatPes.swift  FormatProtocol.swift  StitchView.swift
MobileViewer/: README.md  privacy_policy.md
assets/: about_dialog.csv  action_list.csv  assets.qrc  changelog_window.csv  comboboxes.csv  command_data.toml  config.scm  config.toml  context_menu.csv  copyright_message.txt  coverage_test.toml  crash_test.csv  defaults.toml  em2_config.toml  em2_ui.toml  global_state.csv  grid_group_circular.csv  grid_group_rectangular.csv  groupboxes.csv  ideas.toml  imgui_config.toml  languages.csv  line_edit.csv  main_window.csv  manifest.toml  property_editor.csv  scripts.toml  settings.csv  settings_dialog.csv  settings_editor.csv  settings_tabs.csv  shortcuts.csv  statusbar.csv  statustips.csv  thread_weights.csv  tip_of_the_day_dialog.csv  tips.csv  tips.toml  tooltips.csv  ui.scm  (+1 more)
cmake/: README.md
commands/: exit.ini  singlelinetext.ini  windownext.ini
data/: actions.toml  commands.toml  details.toml  general.toml  manifest.toml  menus.toml  paths.toml  properties.toml  settings.toml  test.toml  to_c_data.py  toolbars.toml  ui.toml
debian/: .gitignore  README.md
dialogs/: about.xml  details.xml  help.xml
doc/: footer.html  header.html
docs/: CNAME  Makefile  README.md  about.html  about.md  brevity.txt  build.sh  changelog.md  changelog.rst  conf.py  contact.html  contact.md  contributing.html  contributing.md  converter.md  copyright_message.txt  data.json  dev.md  development.rst  documentation.html  documentation.md  documentation.tex  donate.html  donate.md  downloads.html  downloads.md  embroidermodder.texi  emrm.sty  features.html  features.md  footer.html  format-progress.txt  header.html  help.txt  index.html  index.md  index.rst  introduction.rst  libembroidery.html  libembroidery_debugger.sh  (+8 more)
embroidermodder/: __init__.py  color.py  config.json  design_primatives.py  details_dialog.py  geometry.py  image_widget.py  layers.py  main_window.py  mdi_window.py  pattern.py  preview_dialog.py  property_editor.py  select_box.py  settings_dialog.py  statusbar.py  syswindows.py  utility.py  view.py
embroidermodder2/: CMakeLists.txt  Info.plist  README.md  about.cpp  about.ui  about_resource.qrc  actions.ini  actions.toml  application.cpp  application.h  build_docs.sh  cmdprompt.cpp  cmdprompt.h  command_data.cpp  command_data.h  commands.cpp  commands.h  commands.toml  config.ini  config.toml  data.cpp  dialogs.cpp  distance.cpp  dolphin.cpp  ellipse.cpp  em2_dev_script.py  embdetails-dialog.cpp  embdetails-dialog.h  embroidermodder.cpp  embroidermodder.h  embroidermodder2-generate-todo  embroidermodder2-valgrind  embroidermodder2.icns  embroidermodder2.pro  embroidermodder2.pro.qtds  gui_backend.cpp  gui_backend.h  heart.cpp  ideas.toml  images.qrc  (+90 more)
experimental/: README.md  swig.i  swigcsharp.pro  swiggo.pro  swiglua.pro  swigpython.pro
imgui-src/: README.md
jni/: Android.mk
libcgeometry/: README.md  geom-arc.c  geom-circle.c  geom-circle.h  geom-line.c
libembroidery/: README.md  api-stop.h  array.c  compound-file-common.h  compound-file-difat.c  compound-file-difat.h  compound-file-directory.c  compound-file-directory.h  compound-file-fat.c  compound-file-fat.h  compound-file-header.c  compound-file-header.h  compound-file.c  compound-file.h  compress.c  emb-arc.c  emb-arc.h  emb-circle.c  emb-circle.h  emb-color.c  emb-color.h  emb-compress.c  emb-compress.h  emb-ellipse.c  emb-ellipse.h  emb-file.c  emb-file.h  emb-flag.c  emb-flag.h  emb-format.c  emb-format.h  emb-hash.c  emb-hash.h  emb-hoop.c  emb-hoop.h  emb-layer.c  emb-layer.h  emb-line.c  emb-line.h  emb-logging.c  (+188 more)
libembroidery-convert/: libembroidery-convert-main.c  libembroidery-convert.pro
libembroidery-shared/: README.md  libembroidery-shared.pro
libembroidery-static/: README.md
libembroidery-test/: README.md  libembroidery-test-main.c  libembroidery-test-valgrind  libembroidery-test.pro  test01.csv  test02.csv
nsis/: embroidermodder2-installer.nsi
pet/: CMakeLists.txt  README.md  build.sh  pico_sdk_import.cmake
pet/src/: interface.c  interface.h  main.cpp
project-files/: TODO  embroidermodder2.desktop  visualstudio.md
samples/: Fleur-de-lis-R2004.dxf  spiral6.csv
scripts/: analysis  boot.lua  boot.scm  circle.lua  circle.scm  commands.scm  convert_xpm  day.lua  day.scm  (+104 more)
src/libembroidery/: CMakeLists.txt  README.md  api-start.h  compound-file-difat.c  compound-file-difat.h  compound-file-directory.c  compound-file-directory.h  compound-file-fat.c  compound-file-header.c  compound-file-header.h  compound-file.c  emb-arc.c  emb-circle.c  emb-color.c  emb-color.h  emb-compress.c  emb-ellipse.c  emb-ellipse.h  emb-file.c  emb-file.h  emb-flag.c  emb-flag.h  emb-format.c  emb-format.h  emb-hoop.c  emb-hoop.h  emb-layer.c  emb-line.c  emb-logging.c  emb-outline.c  emb-path.c  emb-path.h  emb-pattern.c  emb-point.c  emb-polygon.c  emb-polygon.h  emb-polyline.c  emb-polyline.h  emb-reader-writer.c  emb-rect.c  (+121 more)
src/libembroidery-python/: setup.cfg  tests.py
src/libembroidery-python/libembroidery/: image.py  parser.py  tools.py  translation.json
src/libembroidery/examples/barebones/: barebones.ino
src/libembroidery/utility/: README.md  ino-logging.cpp
test/: CMakeLists.txt  test.sh  test_core.c  translations.c
thumbnailers/linux/: CMakeLists.txt  README.md  libembroidery-thumbnailer-kde4.cpp  x-embroidermodder.xml
(+6414 files in other folders)
