cmake_minimum_required(VERSION 3.16)

project(embroidermodder VERSION 2.0.0 LANGUAGES C CXX)

find_package(OpenGL REQUIRED)
find_package(Qt6 REQUIRED COMPONENTS Core Widgets PrintSupport Qml)
find_package(Qt6 REQUIRED COMPONENTS LinguistTools)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")

add_compile_options(
	-g
	-pg
	-O2
	-Wall
	-Wextra
	--coverage
)

add_link_options(
	-pg
	--coverage
)

else()
add_compile_options(
	-g
	-O2
	-Wall
)
endif()

set(SRC ${CMAKE_SOURCE_DIR}/src/embroidermodder2)
set(DATA ${CMAKE_SOURCE_DIR}/data)

add_subdirectory(src/libembroidery)
add_subdirectory(extern/tomlc99)

# The makers of CMake advise that you do not glob source files.
#
# https://cmake.org/cmake/help/latest/command/file.html?highlight=glob#glob
#
qt_add_executable(embroidermodder2
	${SRC}/application.cpp
	${SRC}/application.h
	${SRC}/cmdprompt.cpp
	${SRC}/cmdprompt.h
	${SRC}/commands.cpp
	${SRC}/commands.h
	${SRC}/command-table.cpp
	${SRC}/embdetails-dialog.cpp
	${SRC}/embdetails-dialog.h
	${SRC}/imagewidget.cpp
	${SRC}/imagewidget.h
	${SRC}/layer-manager.cpp
	${SRC}/layer-manager.h
	${SRC}/main.cpp
	${SRC}/mainwindow-actions.cpp
	${SRC}/mainwindow-commands.cpp
	${SRC}/mainwindow.cpp
	${SRC}/mainwindow.h
	${SRC}/mainwindow-menus.cpp
	${SRC}/mainwindow-settings.cpp
	${SRC}/mainwindow-toolbars.cpp
	${SRC}/mdiarea.cpp
	${SRC}/mdiarea.h
	${SRC}/mdiwindow.cpp
	${SRC}/mdiwindow.h
	${SRC}/native-scripting.cpp
	${SRC}/native-scripting.h
	${SRC}/object-arc.cpp
	${SRC}/object-arc.h
	${SRC}/object-base.cpp
	${SRC}/object-base.h
	${SRC}/object-circle.cpp
	${SRC}/object-circle.h
	${SRC}/object-data.h
	${SRC}/object-dimleader.cpp
	${SRC}/object-dimleader.h
	${SRC}/object-ellipse.cpp
	${SRC}/object-ellipse.h
	${SRC}/object-image.cpp
	${SRC}/object-image.h
	${SRC}/object-line.cpp
	${SRC}/object-line.h
	${SRC}/object-path.cpp
	${SRC}/object-path.h
	${SRC}/object-point.cpp
	${SRC}/object-point.h
	${SRC}/object-polygon.cpp
	${SRC}/object-polygon.h
	${SRC}/object-polyline.cpp
	${SRC}/object-polyline.h
	${SRC}/object-rect.cpp
	${SRC}/object-rect.h
	${SRC}/object-save.cpp
	${SRC}/object-save.h
	${SRC}/object-textsingle.cpp
	${SRC}/object-textsingle.h
	${SRC}/preview-dialog.cpp
	${SRC}/preview-dialog.h
	${SRC}/property-editor.cpp
	${SRC}/property-editor.h
	${SRC}/selectbox.cpp
	${SRC}/selectbox.h
	${SRC}/settings-dialog.cpp
	${SRC}/settings-dialog.h
	${SRC}/statusbar-button.cpp
	${SRC}/statusbar-button.h
	${SRC}/statusbar.cpp
	${SRC}/statusbar.h
	${SRC}/undo-commands.cpp
	${SRC}/undo-commands.h
	${SRC}/undo-editor.cpp
	${SRC}/undo-editor.h
	${SRC}/view.cpp
	${SRC}/view.h

	${SRC}/state.h

	${DATA}/commands/about/about.ini
	${DATA}/commands/about/about.js
	${DATA}/commands/about/about.png
	${DATA}/commands/circle/circle.ini
	${DATA}/commands/circle/circle.js
	${DATA}/commands/circle/circle.png
	${DATA}/commands/day/day.ini
	${DATA}/commands/day/day.js
	${DATA}/commands/day/day.png
	${DATA}/commands/distance/distance.ini
	${DATA}/commands/distance/distance.js
	${DATA}/commands/distance/distance.png
	${DATA}/commands/dolphin/dolphin.ini
	${DATA}/commands/dolphin/dolphin.js
	${DATA}/commands/dolphin/dolphin.png
	${DATA}/commands/ellipse/ellipse.ini
	${DATA}/commands/ellipse/ellipse.js
	${DATA}/commands/ellipse/ellipse.png
	${DATA}/commands/erase/erase.ini
	${DATA}/commands/erase/erase.js
	${DATA}/commands/erase/erase.png
	${DATA}/commands/exit/exit.ini
	${DATA}/commands/exit/exit.js
	${DATA}/commands/exit/exit.png
	${DATA}/commands/heart/heart.ini
	${DATA}/commands/heart/heart.js
	${DATA}/commands/heart/heart.png
	${DATA}/commands/help/help-2.png
	${DATA}/commands/help/help.ini
	${DATA}/commands/help/help.js
	${DATA}/commands/help/help.png
	${DATA}/commands/icon128/icon128.ini
	${DATA}/commands/icon128/icon128.js
	${DATA}/commands/icon128/icon128.png
	${DATA}/commands/icon16/icon16.ini
	${DATA}/commands/icon16/icon16.js
	${DATA}/commands/icon16/icon16.png
	${DATA}/commands/icon24/icon24.ini
	${DATA}/commands/icon24/icon24.js
	${DATA}/commands/icon24/icon24.png
	${DATA}/commands/icon32/icon32.ini
	${DATA}/commands/icon32/icon32.js
	${DATA}/commands/icon32/icon32.png
	${DATA}/commands/icon48/icon48.ini
	${DATA}/commands/icon48/icon48.js
	${DATA}/commands/icon48/icon48.png
	${DATA}/commands/icon64/icon64.ini
	${DATA}/commands/icon64/icon64.js
	${DATA}/commands/icon64/icon64.png
	${DATA}/commands/line/line.ini
	${DATA}/commands/line/line.js
	${DATA}/commands/line/line.png
	${DATA}/commands/locatepoint/locatepoint.ini
	${DATA}/commands/locatepoint/locatepoint.js
	${DATA}/commands/locatepoint/locatepoint.png
	${DATA}/commands/move/move.ini
	${DATA}/commands/move/move.js
	${DATA}/commands/move/move.png
	${DATA}/commands/new/new.ini
	${DATA}/commands/new/new.js
	${DATA}/commands/new/new.png
	${DATA}/commands/night/night.ini
	${DATA}/commands/night/night.js
	${DATA}/commands/night/night.png
	${DATA}/commands/open/open.ini
	${DATA}/commands/open/open.js
	${DATA}/commands/open/open.png
	${DATA}/commands/pandown/pandown.ini
	${DATA}/commands/pandown/pandown.js
	${DATA}/commands/pandown/pandown.png
	${DATA}/commands/panleft/panleft.ini
	${DATA}/commands/panleft/panleft.js
	${DATA}/commands/panleft/panleft.png
	${DATA}/commands/panright/panright.ini
	${DATA}/commands/panright/panright.js
	${DATA}/commands/panright/panright.png
	${DATA}/commands/panup/panup.ini
	${DATA}/commands/panup/panup.js
	${DATA}/commands/panup/panup.png
	${DATA}/commands/path/path.ini
	${DATA}/commands/path/path.js
	${DATA}/commands/path/path.png
	${DATA}/commands/platform/platform.ini
	${DATA}/commands/platform/platform.js
	${DATA}/commands/point/point.ini
	${DATA}/commands/point/point.js
	${DATA}/commands/point/point.png
	${DATA}/commands/polygon/polygon.ini
	${DATA}/commands/polygon/polygon.js
	${DATA}/commands/polygon/polygon.png
	${DATA}/commands/polyline/polyline.ini
	${DATA}/commands/polyline/polyline.js
	${DATA}/commands/polyline/polyline.png
	${DATA}/commands/quickleader/quickleader.ini
	${DATA}/commands/quickleader/quickleader.js
	${DATA}/commands/quickleader/quickleader.png
	${DATA}/commands/rectangle/rectangle.ini
	${DATA}/commands/rectangle/rectangle.js
	${DATA}/commands/rectangle/rectangle.png
	${DATA}/commands/redo/redo.ini
	${DATA}/commands/redo/redo.js
	${DATA}/commands/redo/redo.png
	${DATA}/commands/rgb/rgb.ini
	${DATA}/commands/rgb/rgb.js
	${DATA}/commands/rgb/rgb.png
	${DATA}/commands/rotate/rotate.ini
	${DATA}/commands/rotate/rotate.js
	${DATA}/commands/rotate/rotate.png
	${DATA}/commands/sandbox/sandbox.ini
	${DATA}/commands/sandbox/sandbox.js
	${DATA}/commands/sandbox/sandbox.png
	${DATA}/commands/scale/scale.ini
	${DATA}/commands/scale/scale.js
	${DATA}/commands/scale/scale.png
	${DATA}/commands/selectall/selectall.ini
	${DATA}/commands/selectall/selectall.js
	${DATA}/commands/singlelinetext/singlelinetext.ini
	${DATA}/commands/singlelinetext/singlelinetext.js
	${DATA}/commands/singlelinetext/singlelinetext.png
	${DATA}/commands/snowflake/snowflake.ini
	${DATA}/commands/snowflake/snowflake.js
	${DATA}/commands/snowflake/snowflake.png
	${DATA}/commands/star/star.ini
	${DATA}/commands/star/star.js
	${DATA}/commands/star/star.png
	${DATA}/commands/syswindows/syswindows.ini
	${DATA}/commands/syswindows/syswindows.js
	${DATA}/commands/tipoftheday/tipoftheday.ini
	${DATA}/commands/tipoftheday/tipoftheday.js
	${DATA}/commands/tipoftheday/tipoftheday.png
	${DATA}/commands/undo/undo.ini
	${DATA}/commands/undo/undo.js
	${DATA}/commands/undo/undo.png
	${DATA}/commands/windowcascade/windowcascade.ini
	${DATA}/commands/windowcascade/windowcascade.js
	${DATA}/commands/windowcascade/windowcascade.png
	${DATA}/commands/windowclose/windowclose.ini
	${DATA}/commands/windowclose/windowclose.js
	${DATA}/commands/windowclose/windowclose.png
	${DATA}/commands/windowcloseall/windowcloseall.ini
	${DATA}/commands/windowcloseall/windowcloseall.js
	${DATA}/commands/windowcloseall/windowcloseall.png
	${DATA}/commands/windownext/windownext.ini
	${DATA}/commands/windownext/windownext.js
	${DATA}/commands/windownext/windownext.png
	${DATA}/commands/windowprevious/windowprevious.ini
	${DATA}/commands/windowprevious/windowprevious.js
	${DATA}/commands/windowprevious/windowprevious.png
	${DATA}/commands/windowtile/windowtile.ini
	${DATA}/commands/windowtile/windowtile.js
	${DATA}/commands/windowtile/windowtile.png
	${DATA}/commands/zoomextents/zoomextents.ini
	${DATA}/commands/zoomextents/zoomextents.js
	${DATA}/commands/zoomextents/zoomextents.png
	${DATA}/commands/zoomin/zoomin.ini
	${DATA}/commands/zoomin/zoomin.js
	${DATA}/commands/zoomin/zoomin.png
	${DATA}/commands/zoomout/zoomout.ini
	${DATA}/commands/zoomout/zoomout.js
	${DATA}/commands/zoomout/zoomout.png

	${DATA}/help/index.html

	${DATA}/icons/default/3dviews.png
	${DATA}/icons/default/about.png
	${DATA}/icons/default/aligneddimension.png
	${DATA}/icons/default/aligntext.png
	${DATA}/icons/default/aligntextangle.png
	${DATA}/icons/default/aligntextcenter.png
	${DATA}/icons/default/aligntexthome.png
	${DATA}/icons/default/aligntextleft.png
	${DATA}/icons/default/aligntextright.png
	${DATA}/icons/default/angulardimension.png
	${DATA}/icons/default/app.png
	${DATA}/icons/default/arc.png
	${DATA}/icons/default/arc3points.png
	${DATA}/icons/default/arccenterstartangle.png
	${DATA}/icons/default/arccenterstartend.png
	${DATA}/icons/default/arccenterstartlength.png
	${DATA}/icons/default/arccontinue.png
	${DATA}/icons/default/arcstartcenterangle.png
	${DATA}/icons/default/arcstartcenterend.png
	${DATA}/icons/default/arcstartcenterlength.png
	${DATA}/icons/default/arcstartendangle.png
	${DATA}/icons/default/arcstartenddirection.png
	${DATA}/icons/default/arcstartendradius.png
	${DATA}/icons/default/area.png
	${DATA}/icons/default/array.png
	${DATA}/icons/default/backview.png
	${DATA}/icons/default/baselinedimension.png
	${DATA}/icons/default/bean.png
	${DATA}/icons/default/blank.png
	${DATA}/icons/default/bottomview.png
	${DATA}/icons/default/boundary.png
	${DATA}/icons/default/break2points.png
	${DATA}/icons/default/breakatpoint.png
	${DATA}/icons/default/browser.png
	${DATA}/icons/default/camera.png
	${DATA}/icons/default/centermark.png
	${DATA}/icons/default/chamfer.png
	${DATA}/icons/default/changelog.png
	${DATA}/icons/default/check.png
	${DATA}/icons/default/circle.png
	${DATA}/icons/default/circle2points.png
	${DATA}/icons/default/circle3points.png
	${DATA}/icons/default/circlecenterdiameter.png
	${DATA}/icons/default/circlecenterradius.png
	${DATA}/icons/default/circletantanradius.png
	${DATA}/icons/default/circletantantan.png
	${DATA}/icons/default/cloud-2.png
	${DATA}/icons/default/cloud.png
	${DATA}/icons/default/colorblue.png
	${DATA}/icons/default/colorbyblock.png
	${DATA}/icons/default/colorbylayer.png
	${DATA}/icons/default/colorcyan.png
	${DATA}/icons/default/colorgreen.png
	${DATA}/icons/default/colormagenta.png
	${DATA}/icons/default/colorother.png
	${DATA}/icons/default/colorred.png
	${DATA}/icons/default/colorselector.png
	${DATA}/icons/default/colorwhite.png
	${DATA}/icons/default/coloryellow.png
	${DATA}/icons/default/constructionline.png
	${DATA}/icons/default/continuedimension.png
	${DATA}/icons/default/copy.png
	${DATA}/icons/default/copyobject.png
	${DATA}/icons/default/customize.png
	${DATA}/icons/default/customizekeyboard.png
	${DATA}/icons/default/customizemenus.png
	${DATA}/icons/default/customizetoolbars.png
	${DATA}/icons/default/cut.png
	${DATA}/icons/default/date.png
	${DATA}/icons/default/day.png
	${DATA}/icons/default/designdetails.png
	${DATA}/icons/default/diameterdimension.png
	${DATA}/icons/default/dimensionedit.png
	${DATA}/icons/default/dimensionstyle.png
	${DATA}/icons/default/dimensiontextedit.png
	${DATA}/icons/default/dimensionupdate.png
	${DATA}/icons/default/distance.png
	${DATA}/icons/default/dolphin.png
	${DATA}/icons/default/donothing.png
	${DATA}/icons/default/donut-2.png
	${DATA}/icons/default/donut.png
	${DATA}/icons/default/drawing.png
	${DATA}/icons/default/drawing2.png
	${DATA}/icons/default/ellipse.png
	${DATA}/icons/default/ellipsearc.png
	${DATA}/icons/default/ellipseaxisend.png
	${DATA}/icons/default/ellipsecenter.png
	${DATA}/icons/default/erase.png
	${DATA}/icons/default/escape.png
	${DATA}/icons/default/exit.png
	${DATA}/icons/default/explode.png
	${DATA}/icons/default/extend.png
	${DATA}/icons/default/fillet.png
	${DATA}/icons/default/findandreplace.png
	${DATA}/icons/default/freezealllayers.png
	${DATA}/icons/default/frontview.png
	${DATA}/icons/default/gridsettings.png
	${DATA}/icons/default/gridsnapsettings.png
	${DATA}/icons/default/hatch.png
	${DATA}/icons/default/heart-2.png
	${DATA}/icons/default/heart.png
	${DATA}/icons/default/help-2.png
	${DATA}/icons/default/help.png
	${DATA}/icons/default/hex.png
	${DATA}/icons/default/hidealllayers.png
	${DATA}/icons/default/histogram.png
	${DATA}/icons/default/icon128.png
	${DATA}/icons/default/icon16.png
	${DATA}/icons/default/icon24.png
	${DATA}/icons/default/icon32.png
	${DATA}/icons/default/icon48.png
	${DATA}/icons/default/icon64.png
	${DATA}/icons/default/inquiry.png
	${DATA}/icons/default/insertblock.png
	${DATA}/icons/default/join.png
	${DATA}/icons/default/justifytext.png
	${DATA}/icons/default/layerprevious.png
	${DATA}/icons/default/layers.png
	${DATA}/icons/default/layerselector.png
	${DATA}/icons/default/layertranslate.png
	${DATA}/icons/default/leftview.png
	${DATA}/icons/default/lengthen.png
	${DATA}/icons/default/line.png
	${DATA}/icons/default/lineardimension.png
	${DATA}/icons/default/linetypebyblock.png
	${DATA}/icons/default/linetypebylayer.png
	${DATA}/icons/default/linetypecenter.png
	${DATA}/icons/default/linetypecontinuous.png
	${DATA}/icons/default/linetypehidden.png
	${DATA}/icons/default/linetypeother.png
	${DATA}/icons/default/linetypeselector.png
	${DATA}/icons/default/lineweight01.png
	${DATA}/icons/default/lineweight02.png
	${DATA}/icons/default/lineweight03.png
	${DATA}/icons/default/lineweight04.png
	${DATA}/icons/default/lineweight05.png
	${DATA}/icons/default/lineweight06.png
	${DATA}/icons/default/lineweight07.png
	${DATA}/icons/default/lineweight08.png
	${DATA}/icons/default/lineweight09.png
	${DATA}/icons/default/lineweight10.png
	${DATA}/icons/default/lineweight11.png
	${DATA}/icons/default/lineweight12.png
	${DATA}/icons/default/lineweight13.png
	${DATA}/icons/default/lineweight14.png
	${DATA}/icons/default/lineweight15.png
	${DATA}/icons/default/lineweight16.png
	${DATA}/icons/default/lineweight17.png
	${DATA}/icons/default/lineweight18.png
	${DATA}/icons/default/lineweight19.png
	${DATA}/icons/default/lineweight20.png
	${DATA}/icons/default/lineweight21.png
	${DATA}/icons/default/lineweight22.png
	${DATA}/icons/default/lineweight23.png
	${DATA}/icons/default/lineweight24.png
	${DATA}/icons/default/lineweightbyblock.png
	${DATA}/icons/default/lineweightbylayer.png
	${DATA}/icons/default/lineweightdefault.png
	${DATA}/icons/default/lineweightselector.png
	${DATA}/icons/default/lineweightsettings.png
	${DATA}/icons/default/list.png
	${DATA}/icons/default/locatepoint.png
	${DATA}/icons/default/locator-snaptoapparentintersection.png
	${DATA}/icons/default/locator-snaptocenter.png
	${DATA}/icons/default/locator-snaptoendpoint.png
	${DATA}/icons/default/locator-snaptoextension.png
	${DATA}/icons/default/locator-snaptoinsert.png
	${DATA}/icons/default/locator-snaptointersection.png
	${DATA}/icons/default/locator-snaptomidpoint.png
	${DATA}/icons/default/locator-snaptonearest.png
	${DATA}/icons/default/locator-snaptonode.png
	${DATA}/icons/default/locator-snaptoparallel.png
	${DATA}/icons/default/locator-snaptoperpendicular.png
	${DATA}/icons/default/locator-snaptoquadrant.png
	${DATA}/icons/default/locator-snaptotangent.png
	${DATA}/icons/default/lockalllayers.png
	${DATA}/icons/default/makeblock.png
	${DATA}/icons/default/makelayercurrent.png
	${DATA}/icons/default/mass.png
	${DATA}/icons/default/mirror.png
	${DATA}/icons/default/move.png
	${DATA}/icons/default/multiline.png
	${DATA}/icons/default/multilinetext.png
	${DATA}/icons/default/namedviews.png
	${DATA}/icons/default/neisometricview.png
	${DATA}/icons/default/new.png
	${DATA}/icons/default/night.png
	${DATA}/icons/default/nopreview.png
	${DATA}/icons/default/nwisometricview.png
	${DATA}/icons/default/obliquedimensions.png
	${DATA}/icons/default/offset.png
	${DATA}/icons/default/open.png
	${DATA}/icons/default/ordinatedimension.png
	${DATA}/icons/default/orthosettings.png
	${DATA}/icons/default/pan.png
	${DATA}/icons/default/pandown.png
	${DATA}/icons/default/panleft.png
	${DATA}/icons/default/panpoint.png
	${DATA}/icons/default/panrealtime.png
	${DATA}/icons/default/panright.png
	${DATA}/icons/default/panup.png
	${DATA}/icons/default/paste.png
	${DATA}/icons/default/path.png
	${DATA}/icons/default/pickadd.png
	${DATA}/icons/default/picknew.png
	${DATA}/icons/default/plugin.png
	${DATA}/icons/default/point.png
	${DATA}/icons/default/pointdivide.png
	${DATA}/icons/default/pointmeasure.png
	${DATA}/icons/default/pointmultiple.png
	${DATA}/icons/default/pointsingle.png
	${DATA}/icons/default/polarsettings.png
	${DATA}/icons/default/polygon.png
	${DATA}/icons/default/polyline.png
	${DATA}/icons/default/print.png
	${DATA}/icons/default/pyscript.png
	${DATA}/icons/default/qsnapsettings.png
	${DATA}/icons/default/qtracksettings.png
	${DATA}/icons/default/quickdimension.png
	${DATA}/icons/default/quickleader.png
	${DATA}/icons/default/quickselect.png
	${DATA}/icons/default/radiusdimension.png
	${DATA}/icons/default/ray.png
	${DATA}/icons/default/rectangle.png
	${DATA}/icons/default/redo.png
	${DATA}/icons/default/region.png
	${DATA}/icons/default/render.png
	${DATA}/icons/default/rgb.png
	${DATA}/icons/default/rightview.png
	${DATA}/icons/default/rotate.png
	${DATA}/icons/default/rulersettings.png
	${DATA}/icons/default/sandbox.png
	${DATA}/icons/default/satin.png
	${DATA}/icons/default/save.png
	${DATA}/icons/default/saveas.png
	${DATA}/icons/default/scale.png
	${DATA}/icons/default/seisometricview.png
	${DATA}/icons/default/settingsdialog-2.png
	${DATA}/icons/default/settingsdialog.png
	${DATA}/icons/default/shade.png
	${DATA}/icons/default/shade2dwireframe.png
	${DATA}/icons/default/shade3dwireframe.png
	${DATA}/icons/default/shadeflat.png
	${DATA}/icons/default/shadeflatedges.png
	${DATA}/icons/default/shadehidden.png
	${DATA}/icons/default/shadesmooth.png
	${DATA}/icons/default/shadesmoothedges.png
	${DATA}/icons/default/showalllayers.png
	${DATA}/icons/default/singlelinetext.png
	${DATA}/icons/default/sketch-2.png
	${DATA}/icons/default/sketch.png
	${DATA}/icons/default/snapfrom.png
	${DATA}/icons/default/snaptoapparentintersection.png
	${DATA}/icons/default/snaptocenter.png
	${DATA}/icons/default/snaptoendpoint.png
	${DATA}/icons/default/snaptoextension.png
	${DATA}/icons/default/snaptoinsert.png
	${DATA}/icons/default/snaptointersection.png
	${DATA}/icons/default/snaptomidpoint.png
	${DATA}/icons/default/snaptonearest.png
	${DATA}/icons/default/snaptonode.png
	${DATA}/icons/default/snaptonone.png
	${DATA}/icons/default/snaptoparallel.png
	${DATA}/icons/default/snaptoperpendicular.png
	${DATA}/icons/default/snaptoquadrant.png
	${DATA}/icons/default/snaptotangent.png
	${DATA}/icons/default/snowflake-2.png
	${DATA}/icons/default/snowflake.png
	${DATA}/icons/default/solidbox.png
	${DATA}/icons/default/solidcheck.png
	${DATA}/icons/default/solidclean.png
	${DATA}/icons/default/solidcoloredges.png
	${DATA}/icons/default/solidcolorfaces.png
	${DATA}/icons/default/solidcone.png
	${DATA}/icons/default/solidcopyedges.png
	${DATA}/icons/default/solidcopyfaces.png
	${DATA}/icons/default/solidcylinder.png
	${DATA}/icons/default/soliddeletefaces.png
	${DATA}/icons/default/solidextrude.png
	${DATA}/icons/default/solidextrudefaces.png
	${DATA}/icons/default/solidimprint.png
	${DATA}/icons/default/solidinterfere.png
	${DATA}/icons/default/solidintersect.png
	${DATA}/icons/default/solidmovefaces.png
	${DATA}/icons/default/solidoffsetfaces.png
	${DATA}/icons/default/solidrevolve.png
	${DATA}/icons/default/solidrotatefaces.png
	${DATA}/icons/default/solids.png
	${DATA}/icons/default/solidsection.png
	${DATA}/icons/default/solidsediting.png
	${DATA}/icons/default/solidseparate.png
	${DATA}/icons/default/solidsetup.png
	${DATA}/icons/default/solidsetupdrawing.png
	${DATA}/icons/default/solidsetupprofile.png
	${DATA}/icons/default/solidsetupview.png
	${DATA}/icons/default/solidshell.png
	${DATA}/icons/default/solidslice.png
	${DATA}/icons/default/solidsphere.png
	${DATA}/icons/default/solidsubtract.png
	${DATA}/icons/default/solidtaperfaces.png
	${DATA}/icons/default/solidtorus.png
	${DATA}/icons/default/solidunion.png
	${DATA}/icons/default/solidwedge.png
	${DATA}/icons/default/spline.png
	${DATA}/icons/default/star.png
	${DATA}/icons/default/stretch.png
	${DATA}/icons/default/stub.png
	${DATA}/icons/default/surface2dsolid.png
	${DATA}/icons/default/surface3dface.png
	${DATA}/icons/default/surface3dmesh.png
	${DATA}/icons/default/surfacebox.png
	${DATA}/icons/default/surfacecone.png
	${DATA}/icons/default/surfacecylinder.png
	${DATA}/icons/default/surfacedish.png
	${DATA}/icons/default/surfacedome.png
	${DATA}/icons/default/surfaceedge.png
	${DATA}/icons/default/surfaceedgesurface.png
	${DATA}/icons/default/surfacepyramid.png
	${DATA}/icons/default/surfacerevolvedsurface.png
	${DATA}/icons/default/surfaceruledsurface.png
	${DATA}/icons/default/surfaces.png
	${DATA}/icons/default/surfacesphere.png
	${DATA}/icons/default/surfacetabulatedsurface.png
	${DATA}/icons/default/surfacetorus.png
	${DATA}/icons/default/surfacewedge.png
	${DATA}/icons/default/swisometricview.png
	${DATA}/icons/default/temptrackingpoint.png
	${DATA}/icons/default/text.png
	${DATA}/icons/default/textbold.png
	${DATA}/icons/default/textitalic.png
	${DATA}/icons/default/textoverline.png
	${DATA}/icons/default/textstrikeout.png
	${DATA}/icons/default/textunderline.png
	${DATA}/icons/default/thawalllayers.png
	${DATA}/icons/default/theme.png
	${DATA}/icons/default/tipoftheday-2.png
	${DATA}/icons/default/tipoftheday.png
	${DATA}/icons/default/tolerance.png
	${DATA}/icons/default/topview.png
	${DATA}/icons/default/trim.png
	${DATA}/icons/default/undo.png
	${DATA}/icons/default/units.png
	${DATA}/icons/default/unlockalllayers.png
	${DATA}/icons/default/view.png
	${DATA}/icons/default/whatsthis.png
	${DATA}/icons/default/wideflange.png
	${DATA}/icons/default/windowcascade.png
	${DATA}/icons/default/windowclose.png
	${DATA}/icons/default/windowcloseall.png
	${DATA}/icons/default/windownext.png
	${DATA}/icons/default/windowprevious.png
	${DATA}/icons/default/windowtile.png
	${DATA}/icons/default/world.png
	${DATA}/icons/default/zoom.png
	${DATA}/icons/default/zoomall.png
	${DATA}/icons/default/zoomcenter.png
	${DATA}/icons/default/zoomdynamic.png
	${DATA}/icons/default/zoomextents.png
	${DATA}/icons/default/zoomin.png
	${DATA}/icons/default/zoomout.png
	${DATA}/icons/default/zoomprevious.png
	${DATA}/icons/default/zoomrealtime.png
	${DATA}/icons/default/zoomscale.png
	${DATA}/icons/default/zoomselected.png
	${DATA}/icons/default/zoomwindow.png
	${DATA}/icons/test1/theme.png
	${DATA}/icons/test2/theme.png

	${DATA}/images/about_embroidermodder.png
	${DATA}/images/did-you-know.png
	${DATA}/images/lightswitch_off.png
	${DATA}/images/lightswitch_on.png
	${DATA}/images/logo-large.png
	${DATA}/images/logo-quilt.png
	${DATA}/images/logo-small.png
	${DATA}/images/logo-spirals.png
	${DATA}/images/logo_embroidermodder_2_0.png
	${DATA}/images/spool_thread.png
	${DATA}/images/spool_top_bottom.png
	${DATA}/images/text_about.png
	${DATA}/images/texture-canvas.png
	${DATA}/images/texture-spirals.png

	${DATA}/samples/Embroidermodder-R2000.dxf
	${DATA}/samples/Fleur-de-lis-R2004.dxf
	${DATA}/samples/Omega-R2010.dxf
	${DATA}/samples/OSHW-Logo-R2000.dxf
	${DATA}/samples/Puzzle-R2007.dxf
	${DATA}/samples/shamrockin.dst
	${DATA}/samples/shamrockin.rgb
	${DATA}/samples/spiral4.csv
	${DATA}/samples/spiral5.csv
	${DATA}/samples/spiral6.csv
	${DATA}/samples/spiralgrid.csv
	${DATA}/samples/Tux-R2000.dxf

	${DATA}/tables/menus.toml
	${DATA}/tables/tips.toml
	${DATA}/tables/toolbars.toml

	${DATA}/translations/afrikaans/commands_afrikaans.qm
	${DATA}/translations/afrikaans/embroidermodder2_afrikaans.qm
	${DATA}/translations/chinese/commands_chinese.qm
	${DATA}/translations/chinese/embroidermodder2_chinese.qm
	${DATA}/translations/czech/commands_czech.qm
	${DATA}/translations/czech/embroidermodder2_czech.qm
	${DATA}/translations/dutch/commands_dutch.qm
	${DATA}/translations/dutch/embroidermodder2_dutch.qm
	${DATA}/translations/english/commands_english.qm
	${DATA}/translations/english/embroidermodder2_english.qm
	${DATA}/translations/french/commands_french.qm
	${DATA}/translations/french/embroidermodder2_french.qm
	${DATA}/translations/german/commands_german.qm
	${DATA}/translations/german/embroidermodder2_german.qm
	${DATA}/translations/italian/commands_italian.qm
	${DATA}/translations/italian/embroidermodder2_italian.qm
	${DATA}/translations/japanese/commands_japanese.qm
	${DATA}/translations/japanese/embroidermodder2_japanese.qm
	${DATA}/translations/korean/commands_korean.qm
	${DATA}/translations/korean/embroidermodder2_korean.qm
	${DATA}/translations/latin/commands_latin.qm
	${DATA}/translations/latin/embroidermodder2_latin.qm
	${DATA}/translations/polish/commands_polish.qm
	${DATA}/translations/polish/embroidermodder2_polish.qm
	${DATA}/translations/portuguese/commands_portuguese.qm
	${DATA}/translations/portuguese/embroidermodder2_portuguese.qm
	${DATA}/translations/russian/commands_russian.qm
	${DATA}/translations/russian/embroidermodder2_russian.qm
	${DATA}/translations/spanish/commands_spanish.qm
	${DATA}/translations/spanish/embroidermodder2_spanish.qm
	${DATA}/translations/turkish/commands_turkish.qm
	${DATA}/translations/turkish/embroidermodder2_turkish.qm

	${DATA}/embroidermodder2.icns
	${DATA}/embroidermodder2.ico
	${DATA}/Info.plist
	${DATA}/manifest.toml

	${CMAKE_SOURCE_DIR}/LICENSE.md
)

qt_add_translations(embroidermodder2
	TS_FILES
	${DATA}/translations/afrikaans/commands_afrikaans.ts
	${DATA}/translations/afrikaans/embroidermodder2_afrikaans.ts
	${DATA}/translations/arabic/commands_arabic.ts
	${DATA}/translations/arabic/embroidermodder2_arabic.ts
	${DATA}/translations/chinese/commands_chinese.ts
	${DATA}/translations/chinese/embroidermodder2_chinese.ts
	${DATA}/translations/czech/commands_czech.ts
	${DATA}/translations/czech/embroidermodder2_czech.ts
	${DATA}/translations/danish/commands_danish.ts
	${DATA}/translations/danish/embroidermodder2_danish.ts
	${DATA}/translations/dutch/commands_dutch.ts
	${DATA}/translations/dutch/embroidermodder2_dutch.ts
	${DATA}/translations/english/commands_english.ts
	${DATA}/translations/english/embroidermodder2_english.ts
	${DATA}/translations/finnish/commands_finnish.ts
	${DATA}/translations/finnish/embroidermodder2_finnish.ts
	${DATA}/translations/french/commands_french.ts
	${DATA}/translations/french/embroidermodder2_french.ts
	${DATA}/translations/german/commands_german.ts
	${DATA}/translations/german/embroidermodder2_german.ts
	${DATA}/translations/greek/commands_greek.ts
	${DATA}/translations/greek/embroidermodder2_greek.ts
	${DATA}/translations/italian/commands_italian.ts
	${DATA}/translations/italian/embroidermodder2_italian.ts
	${DATA}/translations/japanese/commands_japanese.ts
	${DATA}/translations/japanese/embroidermodder2_japanese.ts
	${DATA}/translations/korean/commands_korean.ts
	${DATA}/translations/korean/embroidermodder2_korean.ts
	${DATA}/translations/latin/commands_latin.ts
	${DATA}/translations/latin/embroidermodder2_latin.ts
	${DATA}/translations/polish/commands_polish.ts
	${DATA}/translations/polish/embroidermodder2_polish.ts
	${DATA}/translations/portuguese/commands_portuguese.ts
	${DATA}/translations/portuguese/embroidermodder2_portuguese.ts
	${DATA}/translations/romanian/commands_romanian.ts
	${DATA}/translations/romanian/embroidermodder2_romanian.ts
	${DATA}/translations/russian/commands_russian.ts
	${DATA}/translations/russian/embroidermodder2_russian.ts
	${DATA}/translations/spanish/commands_spanish.ts
	${DATA}/translations/spanish/embroidermodder2_spanish.ts
	${DATA}/translations/swedish/commands_swedish.ts
	${DATA}/translations/swedish/embroidermodder2_swedish.ts
	${DATA}/translations/turkish/commands_turkish.ts
	${DATA}/translations/turkish/embroidermodder2_turkish.ts)

# WARNING: This does NOT regenerate when the assets change, so you have to
# rerun cmake to ensure that this retriggers.
#
file(COPY
	"${DATA}/commands"
	"${DATA}/images"
	"${DATA}/icons"
	"${DATA}/samples"
	"${DATA}/translations"
	"${DATA}/help"
	"${DATA}/tables"
	"${DATA}/manifest.toml"
	"${CMAKE_SOURCE_DIR}/LICENSE.md"
	DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

include_directories(
	${CMAKE_SOURCE_DIR}/src/embroidermodder2
	${CMAKE_SOURCE_DIR}/src/libembroidery
	${CMAKE_SOURCE_DIR}/extern/tomlc99
)

target_link_libraries(embroidermodder2 PRIVATE
	Qt6::Core
	Qt6::Widgets
	Qt6::PrintSupport
	Qt6::Qml
	embroidery_static
	tomlc99
	${OPENGL_LIBRARIES}
)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
target_link_libraries(embroidermodder2 PRIVATE
	gcov
)
endif()

set_target_properties(embroidermodder2 PROPERTIES
	WIN32_EXECUTABLE ON
	MACOSX_BUNDLE ON
)

if(WIN32)
else(WIN32)
	target_link_libraries(embroidermodder2 PRIVATE m)
endif()
