[metadata]
name = embroidermodder
version = 2.0.0-alpha-4
author = The Embroidermodder Team
author_email = embroidermodder@gmail.com
description = A cross-platform GUI for altering machine embroideries.
long_description = file: README.md, LICENSE, dev_notes.md
long_description_content_type = text/markdown
license = Zlib/libpng License
url = https://embroidermodder.org
project_urls = 
    Source = https://github.com/embroidermodder/embroidermodder
    Bug Tracker = https://github.com/embroidermodder/embroidermodder/issues
classifiers =
    Programing Language :: Python :: 3
    License :: OSI Approved :: zlib/libpng License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
# install_requires =
#     libembroidery
include_package_data = True

[options.entry_points]
console_scripts =
    embroidermodder = embroidermodder:main

[options.packages.find]
where = src

#    test_suite='test',
#    build_apps={
#        "gui_apps":
#            "Embroidermodder 2": "embroidermodder/__init__.py"
#        "icons":
#            "Embroidermodder 2": ["icons/embroidermodder2.ico"]
